umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_cn-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{C-/1v3}"
      - "{N/1v3}"
    bonds:
      - "#"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{C-/1v3}"
      - "{N/1v3}"
    bonds:
      - "#"
