umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_i2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{I/3v1}"
      - "{I/3v1}"
    bonds:
      - "-"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{I/3v1}"
      - "{I/3v1}"
    bonds:
      - "-"
