umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_o2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "=*3"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "=*3"
